# hilite

./: Cargo.toml  README.md
docs/: README_zh-CN.md
examples/rules/: cpp_rules.yaml  log_rules.yaml
src/: arg_parser.rs  highlight.rs  lib.rs  main.rs  rules.rs
src/preset/: cpp.rs  json.rs  logs.rs  mod.rs
